--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "mdbootstrap": "^4.19.0",
     "mdbreact": "^4.27.0",
     "react": "^16.13.1",
+    "react-awesome-reveal": "^2.4.2",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
+    "react-reveal": "^1.2.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.1"
   },
